<resources>
    <string name="app_name">ODA-Admin</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="oda_user">ODA-User</string>
    <string name="oda_admin">ODA-Admin</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="donor">Donor</string>
    <string name="doctor">Doctor</string>
    <string name="recipient">Recipient</string>
    <string name="user">User</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_here">Register here</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="recipients">Recipients</string>
    <string name="doctors_on_our_panel">Doctors On Our Panel</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="registered_users">Registered Users</string>
    <string name="donors">Donors</string>
    <string name="add_a_new_doctor">Add a new Doctor</string>
    <string name="name_of_the_doctor">Name of the Doctor</string>
    <string name="email_address">Email address</string>
    <string name="contact">Contact</string>
    <string name="name_of_the_hospital_or_clinic">Name of the Hospital or Clinic</string>
    <string name="address_of_the_hospital_or_clinic">Address of the Hospital or Clinic</string>
    <string name="state">State</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="search_donor">Search Donor</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="organ">Organ</string>
    <string name="donor_name">Donor Name</string>
    <string name="donated_organ">Donated Organ</string>
    <string name="assigning_to_recipient">Assigning to Recipient</string>
    <string name="recipientFragment">RecipientFragment</string>
    <string name="doctorFragment">DoctorFragment</string>
    <string name="donorFragment">DonorFragment</string>
    <string name="blood_group">Blood Group</string>
    <string name="name_">Name :</string>
    <string name="organ_">Organ :</string>
    <string name="blood_group_">Blood Group :</string>
    <string name="user_name">Username</string>
    <string name="doctor_">Doctor :</string>
    <string name="donor_">Donor :</string>
</resources>