<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oda_background"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="190dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/app_logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cambo"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/appText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cambo"
        android:text="@string/oda_admin"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        android:layout_gravity="center"/>

</LinearLayout>